[Bug #20389] Chilled string cannot be a shared root